<resources>
    <string name="app_name">OET</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_password">Invalid user name or password</string>
    <string name="error_invalid_email">Invalid Email Id</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Instructions</string>
    <string name="instFirstLine">You are about to begin the Online Test. Answer each question carefully, since you will not able to review/change.</string>
    <string name="instSecondLine">In this assessment you will encounter question of types:</string>
    <string name="instThirdLine">Multiple Choice, Fill in the Blanks, Correct Sequence,Image Question,True or False</string>
    <string name="instFourthLine">You need to complete each question in defined period you will not allowed to change or add answer to a question once you have exceeded the time limit.</string>
    <string name="instfifththLine">Click on the Button below to Start</string>
    <string name="questiondescription">In the following question a sequence of alphabet and number is provided, chooce the mission term from option \n 3G,6G,11L,18L,?</string>
    <string name="instFifth1Line">Please do not use back button during test, since you can not change your response once you have submitted them.</string>
    <string name="instsixth1Line">Click on the Button below to start the test.</string>
    <string name="instFth1Line">Note: You should not try to open other application during test.</string>
    <string name="instFt1Line">**********  ALL THE BEST **********</string>
</resources>
