<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0070b5"
    tools:context="com.xentaqsys.oet.fragments.FragmentInstruction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="#fff"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#fff"


            android:text="@string/instFirstLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#fff"

            android:text="@string/instSecondLine" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:gravity="center"
            android:text="@string/instThirdLine"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#fff"

            android:text="@string/instFourthLine"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#fff"

            android:text="@string/instFifth1Line" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:gravity="center"
            android:text="@string/instsixth1Line"
            android:textColor="@android:color/holo_green_dark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#fff"


            android:text="@string/instFth1Line" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#fff"


            android:text="@string/instFt1Line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"

                android:id="@+id/checkbox"
                android:buttonTint="#fff"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:textColor="#fff"
                android:text="I agreed with Terms and Condition"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:background="#ff6600"
                android:id="@+id/buttonCard"

                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:elevation="5dp"
                    android:text="Start" />
            </FrameLayout>


        </RelativeLayout>

    </LinearLayout>
</FrameLayout>
